# api/handler/car.go
@@ -2,11 +2,13 @@ package handler
 
 import (
 	_ "clone/rent_car_us/api/docs"
-	"strconv"
-	"fmt"
 	"clone/rent_car_us/api/models"
-	"clone/rent_car_us/pkg/check"
+	// "clone/rent_car_us/pkg/check"
+	"context"
+	"fmt"
 	"net/http"
+	// "strconv"
+
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 )
@@ -30,13 +32,13 @@ func (h Handler) CreateCar(c *gin.Context) {
 		handleResponse(c, "error while reading request body", http.StatusBadRequest, err.Error())
 		return
 	}
-	if err := check.ValidateCarYear(car.Year); err != nil {
-		handleResponse(c, "error while validating car year, year: "+strconv.Itoa(car.Year), http.StatusBadRequest, err.Error())
+	// if err := check.ValidateCarYear(car.Year); err != nil {
+	// 	handleResponse(c, "error while validating car year, year: "+strconv.Itoa(car.Year), http.StatusBadRequest, err.Error())
 
-		return
-	}
+	// 	return
+	// }
 
-	id, err := h.Store.Car().Create(car)
+	id, err := h.Services.Car().Create(context.Background(),car)
 	if err != nil {
 		handleResponse(c, "error while creating car", http.StatusBadRequest, err.Error())
 		return
@@ -64,10 +66,10 @@ func (h Handler) UpdateCar(c *gin.Context) {
 		handleResponse(c, "error while reading request body", http.StatusBadRequest, err.Error())
 		return
 	}
-	if err := check.ValidateCarYear(car.Year); err != nil {
-		handleResponse(c, "error while validating car year, year: "+strconv.Itoa(car.Year), http.StatusBadRequest, err.Error())
-		return
-	}
+	// if err := check.ValidateCarYear(car.Year); err != nil {
+	// 	handleResponse(c, "error while validating car year, year: "+strconv.Itoa(car.Year), http.StatusBadRequest, err.Error())
+	// 	return
+	// }
 	car.Id = c.Param("id")
 
 	err := uuid.Validate(car.Id)
@@ -76,7 +78,7 @@ func (h Handler) UpdateCar(c *gin.Context) {
 		return
 	}
 
-	id, err := h.Store.Car().Update(car)
+	id, err := h.Services.Car().Update(context.Background(),car)
 	if err != nil {
 		handleResponse(c, "error while updating car", http.StatusBadRequest, err.Error())
 		return
@@ -121,7 +123,7 @@ func (h Handler) GetAllCars(c *gin.Context) {
 
 	request.Page = page
 	request.Limit = limit
-	cars, err := h.Store.Car().GetAllCars(request)
+	cars, err := h.Services.Car().GetAllCars(context.Background(),request)
 	if err != nil {
 		handleResponse(c, "error while gettign cars", http.StatusBadRequest, err.Error())
 
@@ -130,6 +132,7 @@ func (h Handler) GetAllCars(c *gin.Context) {
 
 	handleResponse(c, "", http.StatusOK, cars)
 }
+
 // Deletecar godoc
 // @Router 		/car/{id} [DELETE]
 // @Summary 	delete a car
@@ -153,7 +156,7 @@ func (h Handler) DeleteCar(c *gin.Context) {
 		return
 	}
 
-	err = h.Store.Car().Delete(id)
+	err = h.Services.Car().Delete(context.Background(),id)
 	if err != nil {
 		handleResponse(c, "error while deleting car", http.StatusInternalServerError, err.Error())
 		return
@@ -163,7 +166,7 @@ func (h Handler) DeleteCar(c *gin.Context) {
 }
 
 // GETBYIDcar godoc
-// @Router 		/car [GET]
+// @Router 		/car{id}  [GET]
 // @Summary 	Get user 
 // @Description Get user
 // @Tags 		car
@@ -179,10 +182,57 @@ func (h Handler) GetByIDCar(c *gin.Context) {
 	id := c.Param("id")
 	fmt.Println("id: ", id)
    
-	admin, err := h.Store.Car().GetByID(id)
+	admin, err := h.Services.Car().GetByIDCar(context.Background(),id)
 	if err != nil {
 	 handleResponse(c, "error while getting admin by id", http.StatusInternalServerError, err)
 	 return
 	}
 	handleResponse(c, "", http.StatusOK, admin)
    }
+
+
+
+   // GETALLCARSFREE godoc
+// @Router 		/car/free [GET]
+// @Summary 	Get user list
+// @Description Get user list
+// @Tags 		car
+// @Accept		json
+// @Produce		json
+// @Param		page path string false "page"
+// @Param		limit path string false "limit"
+// @Param		search path string false "search"
+// @Success		200  {object}  models.Car
+// @Failure		400  {object}  models.Response
+// @Failure		404  {object}  models.Response
+// @Failure		500  {object}  models.Response
+func (h Handler) GetAllCarsFree(c *gin.Context) {
+	var (
+		request = models.GetAllCarsRequest{}
+	)
+	request.Search = c.Query("search")
+
+	page, err := ParsePageQueryParam(c)
+	if err != nil {
+		handleResponse(c, "error while parsing page", http.StatusBadRequest, err.Error())
+		return
+	}
+	limit, err := ParseLimitQueryParam(c)
+	if err != nil {
+		handleResponse(c, "error while parsing limit", http.StatusBadRequest, err.Error())
+		return
+	}
+	fmt.Println("page: ", page)
+	fmt.Println("limit: ", limit)
+
+	request.Page = page
+	request.Limit = limit
+	cars, err := h.Services.Car().GetAllCarsFree(context.Background(),request)
+	if err != nil {
+		handleResponse(c, "error while gettign cars", http.StatusBadRequest, err.Error())
+
+		return
+	}
+
+	handleResponse(c, "", http.StatusOK, cars)
+}
